--- a/style.css
+++ b/style.css
@@ -43,13 +43,13 @@
       background-image: url(./img/michelle-francisca-lee-28K-hb0r_sM-unsplash.jpg);
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 700px;
+      background-size: 100%;
     }
 
     header .img-redonda {
       width: 140px;
       height: 140px;
-      margin: 75px auto 0px 125px;
+      margin: 75px auto 0px 115px;
       border-radius: 50%;
       border: none;
       display: flex;
