--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
       background-image: url(./img/michelle-francisca-lee-28K-hb0r_sM-unsplash.jpg);
       background-repeat: no-repeat;
       background-position: center;
-      background-size: 700;
+      background-size: 100%;
     }
 
     header .img-redonda {
